fixed legal, privacy policy and terms of use for dark mode (anchor tags)

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1281,11 +1281,11 @@
 
 /* Privacy Policy (.dark) */
 
-.privacy-policy a {
+.dark .privacy-policy a {
     color: #ffffff;
     transition: color 0.3s linear;
 }
-.privacy-policy a:hover {
+.dark .privacy-policy a:hover {
     color: #c7c7c7;
 }
 
@@ -1315,11 +1315,11 @@
 
 /* Terms of Use (.dark) */
 
-.terms-of-use a {
+.dark .terms-of-use a {
     color: #ffffff;
     transition: color 0.3s linear;
 }
-.terms-of-use a:hover {
+.dark .terms-of-use a:hover {
     color: #c7c7c7;
 }
 
@@ -1349,11 +1349,11 @@
 
 /* Terms of Use (.dark) */
 
-.legal a {
+.dark .legal a {
     color: #ffffff;
     transition: color 0.3s linear;
 }
-.legal a:hover {
+.dark .legal a:hover {
     color: #c7c7c7;
 }
 
